--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.0.9",
-    "@angular/cli": "^17.0.9",
+    "@angular-devkit/build-angular": "^17.1.0-rc.0",
+    "@angular/cli": "^17.1.0-rc.0",
     "@angular/compiler-cli": "^17.0.8",
     "@angular/localize": "^17.0.8",
     "@types/jasmine": "~4.3.0",
@@ -40,6 +40,6 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "^5.3.3"
+    "typescript": "~5.3.0"
   }
 }
