--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^16.2.0",
     "@canvasjs/angular-charts": "^1.0.3",
     "@ng-bootstrap/ng-bootstrap": "^15.1.2",
+    "@ngx-translate/core": "^15.0.0",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.1",
