--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,8 @@
               "@angular/material/prebuilt-themes/indigo-pink.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css",
-              "src/styles/HcssF.css"
+              "src/styles/HcssF.css",
+              "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": []
           },
@@ -96,7 +97,8 @@
               "@angular/material/prebuilt-themes/indigo-pink.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css",
-              "src/styles/HcssF.css"
+              "src/styles/HcssF.css",
+              "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": []
           }
