--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,11 +1,11 @@
-sonar.projectKey=pain-care-frontend-angular
-sonar.projectName=Pain Care Frontend Angular
+sonar.projectKey=Angular_1
+sonar.projectName=Angular_1
 sonar.projectVersion=1.0
 # sonar.sourceEncoding=UTF-8
 sonar.sources=src
 sonar.language=ts
-sonar.host.url=http://localhost:9000
-sonar.login=sqa_75740e67a714826d0d8b99b0c23e0e84af6c3d01
+sonar.host.url=https://c29f-154-144-237-193.ngrok-free.app
+sonar.login=sqa_1868c1341b4f3e169077c609a98f0637f11ee3b3
 sonar.exclusions=**/node_modules/**
 # sonar.tests=src
 # sonar.test.inclusions=**/*.spec.ts
