--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,8 +4,8 @@ sonar.projectVersion=1.0
 # sonar.sourceEncoding=UTF-8
 sonar.sources=src
 sonar.language=ts
-sonar.host.url=http://localhost:9000
-sonar.login=sqp_ebb1492d94255f87b2147b8ca71d4a0ba655c91a
+sonar.host.url=https://c29f-154-144-237-193.ngrok-free.app
+sonar.login=sqa_1868c1341b4f3e169077c609a98f0637f11ee3b3
 sonar.exclusions=**/node_modules/**
 # sonar.tests=src 
 # sonar.test.inclusions=**/*.spec.ts
