change key and project name

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=pain-care-frontend-angular
-sonar.projectName=Pain Care Frontend Angular
+sonar.projectKey=Angular_2
+sonar.projectName=Angular_2
 sonar.projectVersion=1.0
 # sonar.sourceEncoding=UTF-8
 sonar.sources=src
